backend docker not running

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,15 +1,5 @@
 __pycache__/
 *.pyc
-*.zip
-*.bin
-*.pt
-*.pth
-*.pdf
-*.json
-env/
 venv/
-.ipynb_checkpoints/
-data/
-datasets/
-logs/
-tmp/
+.DS_Store
+*.env
