--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,11 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY backend/requirements.txt requirements.txt
+COPY requirements.txt .
+
 RUN apt-get update && apt-get install -y build-essential
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY backend/ /app
+COPY . /app
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
