--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,6 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-pydantic
-python-multipart
-psycopg2-binary
-lxml
-numpy
-scipy
-torch
-transformers
-sentence-transformers
-python-dotenv
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+SQLAlchemy==2.0.28
+psycopg2-binary==2.9.9
+pydantic==2.6.4
+pydantic-settings==2.2.1
